auto_scaling_group/sg.tf
resource "aws_security_group" "asg_web_access_sg" {
  name        = "web_server_inbound"
  description = "Allow HTTP(S) access"
  vpc_id      = data.aws_vpc.default.id
  ingress {
    description      = "Allow HTTP from the Internet"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "Allow HTTPS from the Internet"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

resource "aws_security_group" "asg_ssh_access_sg" {
  name        = "SSH"
  description = "Allow SSH access from MyIP"
  vpc_id      = data.aws_vpc.default.id
  ingress {
    description = "Allow SSH from  MyIP"
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
